...
import br.com.alura.raveline.ui.theme.caveatFont
import br.com.alura.raveline.ui.uistate.HighlightsListUiState

@Composable
fun HighlightsListScreen(
    modifier: Modifier = Modifier,
    title: String = "Trending Day",
    uiState: HighlightsListUiState = HighlightsListUiState(),
    onNavigateProductClick: (ProductModel) -> Unit = {},
    onOrderClick: () -> Unit = {}
) {

    val productModels = uiState.products
...
        ) {
            items(productModels) { p ->
                HighlightProductCard(
                    productModel = p,
                    Modifier
                        .semantics {
                            contentDescription = "Highlights Products Card Item"
                        }
                        .clickable {
                        onNavigateProductClick(p)
                    },
                    onOrderClick = {
                        onOrderClick()
...
