...
            SnackbarHost(hostState = snackBarHostState) { snackData ->
                Snackbar(
                    modifier = Modifier
                        .padding(12.dp)
                        .statusBarsPadding()
                        .semantics {
                            testTag = "RavelineSnackBar"
                        }
                ) {
                    Text(
                        text = snackData.visuals.message,
                        style = MaterialTheme.typography.bodyMedium
                    )
...
        },
        floatingActionButton = {
            if (isShowFab) {
                FloatingActionButton(
                    onClick = onFabClick,
                    modifier = Modifier.semantics {
                        contentDescription = "FloatingActionButton Content MainActivity"
                    }
                ) {
                    Icon(
                        Icons.Filled.PointOfSale,
                        contentDescription = null
                    )
...
