...
        ) {
            items(productModels) { p ->
                MenuProductCard(
                    productModel = p,
                    modifier = Modifier
                        .semantics {
                            contentDescription = "Menu Products Card Item"
                        }
                        .clickable {
                            onProductClick(p)
                        }
                )
            }
...
